@@ -13,6 +13,12 @@
 			<local-jndi-name>jmws/entity/User</local-jndi-name>
 		</entity>
 		
+		<entity>
+			<ejb-name>UserInfos</ejb-name>
+			<local-jndi-name>jmws/entity/UserInfos</local-jndi-name>
+		</entity>
+		
+		
 	</enterprise-beans>
 
 </jboss>
